public interface Mensalidade {

    float mensalidade();

}
