@startuml
'https://plantuml.com/class-diagram

abstract class ElementosDaEscola{
-nome
-numeroIdentificacaoCivil
}

class Professores{
-categoria
}
class Alunos{
-numeroMecanografico
}
interface Mensalidade{
+calcularMensalidade()
}

ElementosDaEscola <|-- Professores
ElementosDaEscola <|-- Alunos

Professores <|.. Mensalidade
'Alunos <|.. Mensalidade

@enduml